--- a/META.yml
+++ b/META.yml
@@ -1,24 +1,24 @@
---- #YAML:1.0
-name:               Net-Statsd-Server
-version:            0.06
-abstract:           ~
+---
+abstract: unknown
 author:
-    - Cosimo Streppone <cosimo@cpan.org>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Cosimo Streppone <cosimo@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    AnyEvent::Handle::UDP:  0
-    IO::Socket::INET:     0
-    JSON::XS:             0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.57_05
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Net-Statsd-Server
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  AnyEvent::Handle::UDP: 0
+  IO::Socket::INET: 0
+  JSON::XS: 0
+version: 0.07
