--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -1,14 +1,13 @@
 ---
-abstract: ~
+abstract: unknown
 author:
   - 'Cosimo Streppone <cosimo@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: 0
 configure_requires:
   ExtUtils::MakeMaker: 0
-distribution_type: module
 dynamic_config: 0
-generated_by: 'ExtUtils::MakeMaker version 6.57_05'
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,4 +21,4 @@ requires:
   AnyEvent::Handle::UDP: 0
   IO::Socket::INET: 0
   JSON::XS: 0
-version: 0.06
+version: 0.07
